<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, BeatGrid!</string>
	<string name="app_name">BeatGrid</string>

	<string name="savegrid_label">Save grid</string>
	<string name="savegrid_title">Save grid</string>
	<string name="savegrid_shortcut">s</string>

	<string name="loadgrid_label">Load grid</string>
	<string name="loadgrid_title">Load grid</string>
	<string name="loadgrid_shortcut">l</string>

	<string name="settings_label">Settings</string>
	<string name="settings_title">BeatGrid settings</string>
	<string name="settings_shortcut">p</string>

	<string name="width_summary">Adjust grid width</string>
	<string name="width_title">Width</string>
	<string name="width_units"></string>

	<string name="height_summary">Adjust grid height</string>
	<string name="height_title">Height</string>
	<string name="height_units"></string>

	<string name="haptic_summary">Vibrate on touch</string>
	<string name="haptic_title">Haptic feedback</string>

	<string name="loop_title">Looping</string>
	<string name="loop_summary">Loop playback of sounds</string>


</resources>
