<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:robobunny="http://robobunny.com">

	<CheckBoxPreference android:key="haptic"
		android:title="@string/haptic_title" android:summary="@string/haptic_summary"
		android:defaultValue="true" />

	<com.robobunny.SeekBarPreference
		android:key="width" android:title="@string/width_title"
		android:summary="@string/width_summary" android:defaultValue="4"
		android:max="10" robobunny:min="1" robobunny:unitsLeft=""
		robobunny:unitsRight="" />

	<com.robobunny.SeekBarPreference
		android:key="height" android:title="@string/height_title"
		android:summary="@string/height_summary" android:defaultValue="4"
		android:max="10" robobunny:min="1" robobunny:unitsLeft=""
		robobunny:unitsRight="" />



</PreferenceScreen>
